Updated language, also added view project US

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -38,15 +38,16 @@ Table 2: User's roles.
 
 | Identifier | Name | Priority | Description |
 | :----------:|:--------------|:---------:|:------------|
-| US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
+| US01 | Log in | high | As a User, I want to authenticate into the system, so that I can access privileged information.  |
 | US02 | Register | high | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.  |
-| US03 | Home Page | high | As a Visitor, I want to access home page, so that I can see a brief website's description.  |
-| US04 | About page | high | As a Visitor, I want to access about page, so that I can see the complete information about the website. |
-| US05 | FAQ page | high | As a Visitor, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
-| US06 | Contact page | high | As a Visitor, I want to access contact page, so that I can have ways to contact the owner if I want to.|
-| US07 | Projects page | high | As a Visitor, I want to access projects page, so that I can see public projects.|
-| US08 | Log in | high | As a Visitor, I want to authenticate into the system using a third party account.|
-| US09 | Register | high | As a Visitor, I want to register myself into the system using a third party service.|
+| US03 | Home Page | high | As a User, I want to access home page, so that I can see a brief website's description.  |
+| US04 | About page | high | As a User, I want to access about page, so that I can see the complete information about the website. |
+| US05 | FAQ page | high | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
+| US06 | Contact page | high | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
+| US10 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
+| US10 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute.|
+| US08 | Log in | high | As a User, I want to authenticate into the system using a third party account.|
+| US09 | Register | high | As a User, I want to register myself into the system using a third party service.|
 
 Table 3: Visitor's user stories.
 
@@ -54,7 +55,6 @@ Table 3: Visitor's user stories.
 
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US10 | Search projects | high | As an Authenticated User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
 | US11 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
 | US12 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
 | US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example the user that has contributed the most to a project), so that I can stay informed.|
