--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -16,8 +16,7 @@ Figure 2: User roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
-| Visitor | *** | *** |
-| User | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
+| User | Unauthenticated user, can see public projects but can't contribute to any of them and can register itself (sign-up) or sign-in in the system. | n/a |
 | Authenticated User | Authenticated user, can create and contribute to projects | Projects developers and contributors |
 | Administrator | Authenticated user, can manage users and projects | Admin |
 | OAUTH | OAUTH Protocol (API) will be used to register and authenticate into the system. | Google/Facebook/Amazon/Microsoft/Twitter/etc... account|
