--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -10,7 +10,7 @@ For the project management, the actors are represented in the figure below and d
 
 Figure 1: Actors.
 
-<img src="images/User_Roles.png" height="450" title="User Roles">
+<img src="images/diagramalbaw.JPG" height="450" title="User Roles">
 
 Figure 2: User roles.
 
