Updated Project member US descriptions

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -84,14 +84,14 @@ Table 5: Project Member's user stories.
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US19 | Close Task | high | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
-| US19 | Create Task Tags | high | As a project manager, I want, so that .|
-| US19 | Delete Task Tags | high | As a project manager, I want  so that .|
+| US19 | Create Task Tags | high | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
+| US19 | Delete Task Tags | high | As a project manager, I want to delete an available tag, so that the task list remains organized.|
 | US19 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
-| US19 | Delete Task | high | As a project manager, I want to delete a task, so that .|
-| US19 | Delete Task Comment | high | As a project manager, I want to delete a task comment, so that .|
+| US19 | Delete Task | high | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
+| US19 | Delete Task Comment | high | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
 | US19 | Assign to Task | high | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
-| US19 | Delete Post | high | As a project manager, I want to delete a post, so that .|
-| US19 | Delete Reply | high | As a project manager, I want to delete a reply to a post, so that .|
+| US19 | Delete Post | high | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
+| US19 | Delete Reply | high | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
 | US20 | Manage project member | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
 
 Table 6: Project Administrator's user stories.
