Add Search Profiles and View Profiles to User.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -38,6 +38,8 @@ Table 1: Actor's description.
 | US06 | Contact page | high | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
 | US10 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
 | US10 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute.|
+| US10 | Search profiles | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
+| US10 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
 | US08 | Log in | high | As a User, I want to authenticate into the system using a third party account.|
 | US09 | Register | high | As a User, I want to register myself into the system using a third party service.|
 
@@ -53,7 +55,7 @@ Table 3: Visitor's user stories.
 | US14 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
 | US14 | Delete account | high | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
 
-Table 4: User user's stories.
+Table 4: Authenticated User's stories.
 
 ### 2.1.1.1 Project Member
 
