--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -6,11 +6,9 @@ This artifact contains the specification of the actors and their user stories, s
 
 For the project management, the actors are represented in the figure below and described in the table.
 
-Figure 1: Actors.
-
 <img src="images/diagramalbaw.JPG" height="450" title="User Roles">
 
-Figure 2: User roles.
+Figure 1: Actors.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
@@ -37,12 +35,12 @@ Table 1: Actor's description.
 | US05 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
 | US06 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
 | US10 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
-| US10 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute.|
+| US10 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
 | US10 | Search profiles | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
 | US10 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
 | US08 | Log in | high | As a User, I want to authenticate into the system using a third party account.|
 
-Table 3: User user's stories.
+Table 3: User's user stories.
 
 ### 2.1.1 Authenticated User
 
@@ -50,28 +48,26 @@ Table 3: User user's stories.
 | :----------:|:-------------:| :-----:|:-------|
 | US11 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
 | US12 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
-| US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example the user that has contributed the most to a project), so that I can stay informed.|
+| US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example how many tasks I've marked as closed for a given project), so that I can stay informed.|
 | US14 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
-| US14 | Delete account | high | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
+| US14 | Delete account | low | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
 
-Table 4: Authenticated User user's stories.
+Table 4: Authenticated User's user stories.
 
 ### 2.1.1.1 Project Member
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US14 | View Project | high | As a project member, I want to be able to view a project from my projects list, so that I can see the current state of a project.|
+| US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
 | US14 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
 | US15 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
 | US15 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
-| US15 | Mark Task as Completed | high | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it.|
-| US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
-| US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
+| US15 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
 | US14 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
-| US14 | Create Post | high | As a project member, I want to create a post in the forum, so that i can discuss a part of the project.|
+| US14 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
 | US14 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
-| US14 | Leave Project | high | As a project member, I want to leave a project, so that I can stop my participation.|
+| US14 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
 
 Table 5: Project Member's user stories.
 
@@ -79,16 +75,17 @@ Table 5: Project Member's user stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US19 | Close Task | high | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
-| US19 | Create Task Tags | high | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
-| US19 | Delete Task Tags | high | As a project manager, I want to delete an available tag, so that the task list remains organized.|
+| US19 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
+| US19 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
+| US19 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
 | US19 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
-| US19 | Delete Task | high | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
-| US19 | Delete Task Comment | high | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
-| US19 | Assign to Task | high | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
-| US19 | Delete Post | high | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
-| US19 | Delete Reply | high | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
-| US20 | Manage project member | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
+| US19 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
+| US19 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
+| US19 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
+| US19 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
+| US19 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
+| US20 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
+| US21 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
 
 Table 6: Project Administrator's user stories.
 
