Updated Business Rules.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -119,11 +119,11 @@ Table 8: Website Administrator user's stories.
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
 | BR01 | Register | To register, user must fill a register form with full name, nickname, e-mail, birthday, gender and instuticion (not required). |
-| BR02 | Project Member Banned/Removed | ****|
-| BR02 | Project Manager Banned/Removed | ****|
-| BR02 | Project Owner Banned | ****|
-| BR02 | Project Owner wants to leave | Project Owner must transfer project's ownership to other Project Member before leave.|
-| BR02 | Authenticated User Banned | ****|
+| BR02 | Project Member Banned/Removed | When a Project Member is banned/removed from a project, all the work made is maintained and the tasks assigned to him are left open, with all project managers being notified.|
+| BR02 | Project Manager Banned/Removed | When a Project Manager is banned/removed from a project, all the work made is maintained and the tasks assigned to him are left open, with the project owner being notified.|
+| BR02 | Project Owner Banned | When a Project Owner is banned from a project, all projects managed will be archived and reviewed one by one by the web-site administration, having full permission to terminate or assign ownership to another project manager.|
+| BR02 | Project Owner wants to leave | When a Project Manager wants to leave a project, he must transfer project's ownership to other Project Manager before leave.|
+| BR02 | Authenticated User Banned/Removed | When a Authenticated User is banned from the web-site, all information will be deleted from our database.|
 
 Table 9: Business rules.
 
