--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -119,11 +119,14 @@ Table 8: Website Administrator user's stories.
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
 | BR01 | Register | To register, user must fill a register form with full name, nickname, e-mail, birthday, gender and instuticion (not required). |
-| BR02 | Project Member Banned/Removed | When a Project Member is banned/removed, all the work made is maintained and he is removed from the tasks he was assigned to, with all projects managers/owners being notified.|
-| BR02 | Project Manager Banned/Removed | When a Project Manager is banned/removed, all the work made is maintained and he is removed from the tasks he was assigned to, with all the projects managers/owners being notified.|
-| BR02 | Project Owner Banned | When a Project Owner is banned, all the projects he used to manage will be archived and reviewed one by one by the website administration, having full permission to terminate or assign ownership to a project member.|
-| BR02 | Project Owner wants to leave | When a Project Manager wants to leave a project, he must transfer project's ownership to other project member before leave.|
-| BR02 | Authenticated User Banned/Removed | When a Authenticated User is banned from the website, all information will be deleted from our database.|
+| BR02 | Project Member Removed | When a Project Member is removed from the project, all the work made is maintained and he is removed from the tasks he was assigned to, with all project's managers/owners being notified.|
+| BR03 | Project Member Banned | When a Project Member is banned by the website administration, all the work made is maintained and he is removed from the tasks he was assigned to, with all projects managers/owners being notified.|
+| BR04 | Project Manager Removed | When a Project Manager is removed from the project, all the work made is maintained and he is removed from the tasks he was assigned to, with all the project's managers/owners being notified.|
+| BR05 | Project Manager Banned | When a Project Manager is banned by the website administration, all the work made is maintained and he is removed from the tasks he was assigned to, with all the projects managers/owners being notified.|
+| BR06 | Project Owner wants to leave | When a Project Manager wants to leave a project, he must transfer project's ownership to other project member before leave.|
+| BR07 | Project Owner Banned | When a Project Owner is banned, all the projects he used to manage will be archived and reviewed one by one by the website administration, having full permission to terminate or assign ownership to a project member.|
+| BR08 | Authenticated User Removed | When a Authenticated User is removed from the website, all information will be deleted from our database.|
+| BR09 | Authenticated User Banned | When a Authenticated User is banned from the website administration, all information will be deleted from our database.|
 
 Table 9: Business rules.
 
