Done numbering US

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -34,11 +34,11 @@ Table 1: Actor's description.
 | US04 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
 | US05 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
 | US06 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
-| US10 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
-| US10 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
-| US10 | Search profiles | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
+| US07 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
+| US08 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
+| US09 | Search profiles | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
 | US10 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
-| US08 | Log in | high | As a User, I want to authenticate into the system using a third party account.|
+| US11 | Log in | high | As a User, I want to authenticate into the system using a third party account.|
 
 Table 3: User's user stories.
 
@@ -46,11 +46,11 @@ Table 3: User's user stories.
 
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US11 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
-| US12 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
-| US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example how many tasks I've marked as closed for a given project), so that I can stay informed.|
-| US14 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
-| US14 | Delete account | low | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
+| US12 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
+| US13 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
+| US14 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example how many tasks I've marked as closed for a given project), so that I can stay informed.|
+| US15 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
+| US16 | Delete account | low | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
 
 Table 4: Authenticated User's user stories.
 
@@ -58,16 +58,17 @@ Table 4: Authenticated User's user stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
-| US14 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
-| US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
-| US15 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
-| US15 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
-| US15 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
-| US14 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
-| US14 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
-| US14 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
-| US14 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
+| US17 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
+| US18 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
+| US19 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
+| US20 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
+| US21 | Assign to My Tasks | medium | As a project member, I want to assign a project member to a task that I've created, so that he can help complete it.|
+| US22 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
+| US23 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
+| US24 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
+| US25 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
+| US26 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
+| US27 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
 
 Table 5: Project Member's user stories.
 
@@ -75,17 +76,17 @@ Table 5: Project Member's user stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US19 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
-| US19 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
-| US19 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
-| US19 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
-| US19 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
-| US19 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
-| US19 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
-| US19 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
-| US19 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
-| US20 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
-| US21 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
+| US28 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
+| US29 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
+| US30 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
+| US31 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
+| US32 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
+| US33 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
+| US34 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
+| US35 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
+| US36 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
+| US37 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
+| US38 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
 
 Table 6: Project Administrator's user stories.
 
@@ -93,9 +94,9 @@ Table 6: Project Administrator's user stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US21 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
-| US22 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
-| US23 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
+| US39 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
+| US40 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
+| US41 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
 
 Table 7: Project Owner's user stories.
 
@@ -103,12 +104,12 @@ Table 7: Project Owner's user stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US24| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
-| US25| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
-| US26| Promote User     | high | As an Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website functionalities.|
-| US27| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
-| US28| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
-| US29| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
+| US42| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
+| US43| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
+| US44| Promote User     | high | As an Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website functionalities.|
+| US45| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
+| US46| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
+| US47| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
 
 Table 8: Website Administrator user's stories.
 
