Mariquices de João Pedro Sá.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -126,7 +126,7 @@ Table 8: Website Administrator user's stories.
 | BR05 | Project Manager Banned | When a Project Manager is banned by the website administration, all the work made is maintained and he is removed from the tasks he was assigned to, with all the projects managers/owners being notified.|
 | BR06 | Project Owner wants to leave | When a Project Manager wants to leave a project, he must transfer project's ownership to other project member before leave.|
 | BR07 | Project Owner Banned | When a Project Owner is banned, all the projects he used to manage will be archived and reviewed one by one by the website administration, having full permission to terminate or assign ownership to a project member.|
-| BR08 | Authenticated User Removed | When a Authenticated User is removed from the website, all information will be deleted from our database.|
+| BR08 | Authenticated User Account Removed | When a Authenticated User account is removed from the website, all information will be deleted from our database.|
 | BR09 | Authenticated User Banned | When a Authenticated User is banned from the website administration, all information will be deleted from our database.|
 
 Table 9: Business rules.
