Add Search Projects US to Website Administrator.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -110,6 +110,7 @@ Table 7: Project Owner's user stories.
 | US45| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
 | US46| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
 | US47| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
+| US48| Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
 
 Table 8: Website Administrator user's stories.
 
