--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -6,7 +6,7 @@ This artifact contains the specification of the actors and their user stories, s
 
 For the project management, the actors are represented in the figure below and described in the table.
 
-<img src="images/diagramalbaw.JPG" height="450" title="User Roles">
+<img src="images/NoteDiagram.PNG" height="450" title="User Roles">
 
 Figure 1: Actors.
 
