Finnished yes maybe

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -54,65 +54,75 @@ Table 3: User's user stories.
 
 Table 4: Authenticated User's user stories.
 
+
+### 2.1.2 Authenticated Premium User
+
+| Identifier | Name | Priority | Description |
+| :----------:|:-------------:| :-----:|:-------|
+| US17 | Private projects | high | As an Authenticated Premium User, I want to be able to create private projects, so that only I or the project's team members can access and edit it.|
+
+
+Table 5: Authenticated Premium User's user stories.
+
 ### 2.1.1.1 Project Member
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US17 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
-| US18 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
-| US19 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
-| US20 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
-| US21 | Assign to My Tasks | medium | As a project member, I want to assign a project member to a task that I've created, so that he can help complete it.|
-| US22 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
-| US23 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
-| US24 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
-| US25 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
-| US26 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
-| US27 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
+| US18 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
+| US19 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
+| US20 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
+| US21 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
+| US22 | Assign to My Tasks | medium | As a project member, I want to assign a project member to a task that I've created, so that he can help complete it.|
+| US23 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
+| US24 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
+| US25 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
+| US26 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
+| US27 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
+| US28 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
 
-Table 5: Project Member's user stories.
+Table 6: Project Member's user stories.
 
 ### 2.1.1.2 Project Manager
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US28 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
-| US29 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
-| US30 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
-| US31 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
-| US32 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
-| US33 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
-| US34 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
-| US35 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
-| US36 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
-| US37 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
-| US38 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
+| US29 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
+| US30 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
+| US31 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
+| US32 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
+| US33 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
+| US34 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
+| US35 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
+| US36 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
+| US37 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
+| US38 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
+| US39 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
 
-Table 6: Project Administrator's user stories.
+Table 7: Project Administrator's user stories.
 
 ### 2.1.1.3 Project Owner
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US39 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
-| US40 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
-| US41 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
+| US40 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
+| US41 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
+| US42 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
 
-Table 7: Project Owner's user stories.
+Table 8: Project Owner's user stories.
 
 ### 2.2.3 Website Administrator
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US42| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
-| US43| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
-| US44| Promote User     | high | As an Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website functionalities.|
-| US45| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
-| US46| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
-| US47| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
-| US48| Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
+| US43| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
+| US44| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
+| US45| Promote User     | high | As an Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website functionalities.|
+| US46| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
+| US47| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
+| US48| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
+| US49| Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
 
-Table 8: Website Administrator user's stories.
+Table 9: Website Administrator user's stories.
 
 ## A1. Annex: Supplementary requirements
 
@@ -130,7 +140,7 @@ Table 8: Website Administrator user's stories.
 | BR08 | Authenticated User Account Removed | When a Authenticated User account is removed from the website, all information will be deleted from our database.|
 | BR09 | Authenticated User Banned | When a Authenticated User is banned from the website administration, all information will be deleted from our database.|
 
-Table 9: Business rules.
+Table 10: Business rules.
 
 ### A1.2. Technical requirements
 
@@ -147,7 +157,7 @@ Table 9: Business rules.
 | TR09 |Scalability |System must be prepared to deal with user base growth and corresponding operations |
 | TR10 |Ethics |The system must respect the ethical principles in software development. |
 
-Table 10: Technical requiriments.
+Table 11: Technical requiriments.
 
 ### A1.3. Restrictions
 
@@ -155,16 +165,18 @@ Table 10: Technical requiriments.
 | :----------:|:-------------:|:----------- |
 | C01 |Deadline |The system should be ready to be used at the beginning of the semester so the students can organize themselves as quickly as possible|
 
-Table 11: Restrictions
+Table 12: Restrictions
 
 ***
 <!--
 ## Revision history
 
 Changes made to the first submission:
-1. Item 1
-1. Item 2
-
+1. Increased user stories specificity.
+2. Added the premium users branch to UML
+3. Added user stories
+4. Specified used API (OAUTH protocol)
+5. Rewrote business rules
 ***
 -->
 
