--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -14,11 +14,16 @@ Figure 1: Actors.
 |:----------:|:------------|:--------|
 | User | Unauthenticated user, can see public projects but can't contribute to any of them and can register itself (sign-up) or sign-in in the system. | n/a |
 | Authenticated User | Authenticated user, can create and contribute to projects | Projects developers and contributors |
+| Premium Authenticated User | Premium authenticated user, can create and contribute to projects, both private and public | Projects developers and contributors |
 | Administrator | Authenticated user, can manage users and projects | Admin |
 | OAUTH | OAUTH Protocol (API) will be used to register and authenticate into the system. | Google/Facebook/Amazon/Microsoft/Twitter/etc... account|
-| Project Owner | Have all the project permissions, can delete the project and manage coordinators | A project creator |
+| Project Owner | Has all the project permissions, can delete the project and manage coordinators | A project creator |
 | Project Manager | Can manage all team members and tasks | A project supervisor |
 | Project Member | Can contribute to projects, creating and solving tasks | A project member |
+| Premium Project Owner | Has all the project permissions, can delete the project and manage coordinators | A project creator |
+| Premium Project Manager | Can manage all team members and tasks | A project supervisor |
+| Premium Project Member | Can contribute to projects, creating and solving tasks | A project member |
+
 
 Table 1: Actor's description.
 
@@ -168,7 +173,6 @@ Table 11: Technical requiriments.
 Table 12: Restrictions
 
 ***
-<!--
 ## Revision history
 
 Changes made to the first submission:
@@ -178,7 +182,7 @@ Changes made to the first submission:
 4. Specified used API (OAUTH protocol)
 5. Rewrote business rules
 ***
--->
+
 
 GROUP43, 18/02/2018
 
